examples/test/testpolicy2938.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2938
  namespace: namespace54
spec:
  podSelector:
    matchLabels:
      key15: value22
      key45: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value10
          key13: value10
          key12: value23
      podSelector:
        matchLabels:
          key4: value49
          key39: value46
